<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_user">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSalirUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@drawable/edittext_rounded_corner"
        android:text="@string/btn_salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBienvenidaUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/tv_bienvenida_user"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenidaUser" />

    <TextView
        android:id="@+id/tvMessageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstNameUser" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_user"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/FLFondoLila"
        android:layout_width="51dp"
        android:layout_height="53dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_updateText">

        <ImageView
            android:id="@+id/updateUser"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:clickable="true"
            android:src="@drawable/update_user" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_updateText"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:padding="5dp"
        android:text="@string/tv_UpdateIndexText"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent" />

    <!--
    <FrameLayout
        android:id="@+id/FLFondoLila2"
        android:layout_width="51dp"
        android:layout_height="53dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/border_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_updateText">

        <ImageView
        android:id="@+id/pizza"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:clickable="true"
        android:src="@drawable/pizza" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_PizzaText"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:padding="5dp"
        android:text="@string/tv_User_pizzaText"
        android:textSize="11dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent" />
!-->
</androidx.constraintlayout.widget.ConstraintLayout>