<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginAdmin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_batman">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSalirAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="@drawable/edittext_rounded_corner"
        android:text="@string/btn_salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBienvenidaAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_Bienvenida"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstNameAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="500dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessageAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstNameAdmin" />

    <TextView
        android:id="@+id/tvAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_admin"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AdminbtnDeleteUser"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginBottom="4dp"

        android:clickable="true"
        android:src="@drawable/user_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="50dp" />

    <EditText
        android:id="@+id/et_deleteText"
        android:layout_width="124dp"
        android:layout_height="58dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edittext_rounded_corner"
        android:contentDescription="@string/tv_deleteText_description"
        android:hint="@string/tv_mensajeElimin"

        android:padding="15dp"
        android:textColor="#04DDFA"
        android:textColorHint="#04DDFA"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/FLFondoLila"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/border_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_pizzaText">

        <ImageView
            android:id="@+id/btnAdminPizza"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:clickable="true"
            android:src="@drawable/pizza" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_pizzaText"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginBottom="156dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tv_User_pizzaText"
        android:textColor="#04DDFA"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AdminbtnActuUser"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginBottom="232dp"
        android:clickable="true"
        android:src="@drawable/actu_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="50dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342">

    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/FLFondoLila2"
        android:layout_width="51dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_back"
        app:layout_constraintBottom_toTopOf="@+id/AdminbtnDeleteUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FLFondoLila"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btnAdminUsersList"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:clickable="true"
            android:src="@drawable/update_user" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>